tdf#102742 fix wrong results for MOD function

DO NOT PUSH THIS PATCH SET ! ! !

ScInterpreter::ScMod has been largely rewritten and
a constraint check has been added (numerator != 0).
It appears that integer values of arguments cannot accurately
determined nor converterd accurately to int values, so no simpler
(faster) treatment for integer values.

Change-Id: I3af60d93019b212ce7c03eea48b509bfbc713cf7